# tagger-cli

./: .pylintrc  README.md  api.py  config.py  funcs.py  main.py  pyproject.toml
.github/workflows/: test.yml
