[tool.poetry]
name = "tagger_cli"
version = "0.1.0"
description = "EXIF tagger for CameraHub"
authors = ["Jonathan Gazeley <me@jonathangazeley.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
exif = "^1.3.2"
uuid = "^1.30"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
